--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<body>	
 		<div  id='first'>
 		<nav>
-				<a href='#about' >About</a><a href='skills.html' >Skills</a><a href='contact.html'>Contact</a>
+				<a href='main.html' >About</a><a href='skills.html' >Skills</a><a href='contact.html'>Contact</a>
 		</nav>	
 			<section class='left' id='about'>
 				<p class='tagline'>Perfection is all about Uniqueness, Originality and Simplicity.</p>
